<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools">

	<data>

	</data>

	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		tools:context="com.app.khajaghar.zinger.com.app.khajaghar.ui.login.LoginActivity">

		<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_above="@id/layout_login">

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_centerVertical="true"
				android:orientation="vertical"
				android:padding="16dp">

				<ImageView
					android:layout_width="150dp"
					android:layout_height="150dp"
					android:src="@drawable/ic_online_groceris" />

				<TextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_gravity="top"
					android:layout_marginTop="16dp"
					android:fontFamily="@font/poppins_bold"
					android:gravity="center|start"
					android:paddingTop="3dp"
					android:text="Welcome to\nKhajaGhar"
					android:textAppearance="@style/AppbarTitle"
					android:textColor="@android:color/black"
					android:textSize="32sp" />

			</LinearLayout>

		</RelativeLayout>

		<LinearLayout
			android:id="@+id/layout_login"
			android:layout_width="match_parent"

			android:layout_height="wrap_content"
			android:layout_alignParentBottom="true"
			android:background="@color/colorAccent"
			android:orientation="vertical"
			android:padding="16dp">

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_gravity="top"
				android:layout_marginTop="16dp"
				android:fontFamily="@font/poppins_bold"
				android:gravity="center|start"
				android:paddingTop="3dp"
				android:text="@string/label_email_address"
				android:textColor="@android:color/white"
				android:textStyle="bold" />

			<EditText
				android:id="@+id/edit_email"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:background="@null"
				android:fontFamily="@font/poppins_semibold"
				android:hint="@string/hint_enter_email"
				android:inputType="textEmailAddress"
				android:paddingTop="8dp"
				android:paddingBottom="8dp"
				android:singleLine="true"
				android:textColor="@android:color/black"
				android:textColorHint="#000000"
				android:textCursorDrawable="@drawable/color_cursor"
				android:textSize="20sp"
				android:textStyle="bold" />

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_gravity="top"
				android:layout_marginTop="16dp"
				android:fontFamily="@font/poppins_bold"
				android:gravity="center|start"
				android:paddingTop="3dp"
				android:text="@string/label_password"
				android:textColor="@android:color/white"
				android:textStyle="bold" />
			<EditText
				android:id="@+id/edit_password"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:background="@null"
				android:fontFamily="@font/poppins_semibold"
				android:hint="@string/hint_enter_password"
				android:inputType="textPassword"
				android:maxLength="10"
				android:paddingTop="8dp"
				android:paddingBottom="8dp"
				android:singleLine="true"
				android:textColor="@android:color/black"
				android:textColorHint="#000000"
				android:textCursorDrawable="@drawable/color_cursor"
				android:textSize="20sp"
				android:textStyle="bold" />
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/label_register"
				android:layout_gravity="end"
				android:clickable="true"
				android:paddingBottom="12dp"
				android:paddingEnd="12dp"
				android:id="@+id/btn_register"
				android:textColor="@color/md_white_1000"/>
			<com.google.android.material.button.MaterialButton
				android:id="@+id/button_login"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="8dp"
				android:fontFamily="@font/poppins_semibold"
				android:text="LOGIN"
				android:textSize="18sp"
				android:textStyle="bold"
				app:backgroundTint="@android:color/black" />
		</LinearLayout>
	</RelativeLayout>
</layout>
